<resources>
    <string name="app_name">Warehouse Project</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="user_name">username</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="title_activity_main">MVP Example</string>
    <string name="username_error">Username cannot be empty</string>
    <string name="password_error">Password cannot be empty</string>
    <string name="product_count">Product Count %s</string>
    <string name="product_qty">Quantity: %s</string>
    <string name="lorem">In publishing and graphic design, Lorem ipsum is a placeholder text commonly used to demonstrate the visual form of a document or a typeface without relying on meaningful content. Lorem ipsum may be used as a placeholder before final copy is available. Wikipedia</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="image">image</string>

    <string name="feelings">Feelings</string>
    <string name="txt_topbar_account">Account</string>
    <string name="content_desc_todo">TODO</string>
    <string name="upload_image">Upload Image</string>
    <string name="upload_helper_text">Upload max 5mb</string>
    <string name="code_product">code product</string>
    <string name="product_name">Indomie Goreng</string>
    <string name="product_quantity">product quantity</string>
    <string name="quantity_default_text">0</string>
    <string name="category_product">category</string>
    <string name="add_later_category">add later category</string>
    <string name="sub_category_product_hint">sub category product</string>
    <string name="specification_product_hint">specification product_hint</string>
    <string name="price_product_hint">price product</string>
    <string name="location_product_hint">location product</string>
    <string name="status_product_hint">status</string>
    <string name="model_product_hint">model product</string>
    <string name="lot_product_hint">lot product</string>
    <string name="exp_product_hint">exp product</string>
    <string name="btn_submit_text">Submit</string>
    <string name="chip_example_text">active</string>
    <string name="textview_example">TextView</string>
    <string name="susu_beruang">Susu beruang</string>
    <string name="code_example">PX0001</string>
    <string name="specification_example">Specification Product</string>
    <string name="expired_date_example">expired date:</string>
    <string name="exp_example">exp</string>
    <string name="quantity_example">quantity:</string>
    <string name="quantity_number_example">100</string>
    <string name="price">price:</string>
    <string name="price_number_example">Rp 250.000</string>
    <string name="location">location:</string>
    <string name="location_example">Location</string>
    <string name="model">model:</string>
    <string name="model_example">model</string>
    <string name="lot">lot:</string>
    <string name="lot_example">lot</string>
    <string name="created_at">created_at:</string>
    <string name="created_at_example">Created_at</string>
    <string name="updated_at">updated_at:</string>
    <string name="update_at_example">Update_at</string>
    <string name="save_barcode">save barcode</string>
    <string name="delete_item">delete item</string>
    <string name="update_item">update item</string>
    <string name="quantity_200">quantity: 200</string>
    <string name="created_by">created by:</string>
    <string name="akhmad">Akhmad</string>
    <string name="detail">detail</string>
    <string name="date">18 Jan 2023</string>
    <string name="time">Sat, 23:23:01</string>
    <string name="load">load...</string>
    <string name="create_category_hint">create category</string>
    <string name="add">Add</string>
    <string name="create_sub_category">create sub category</string>
    <string name="travel">Travel</string>
    <string name="mountain">Mountain</string>
    <string name="scan_stock_in">scan stock in</string>
    <string name="scan_stock_out">scan stock out</string>
    <string name="total_product">Total Product</string>
    <string name="_200">200</string>
    <string name="of_the_whole_product">of the whole product</string>
    <string name="add_product">Add Product</string>
    <string name="product_list">Product list</string>
    <string name="no_product_data_has_been_added_yet">No product data has been added yet</string>
    <string name="page_text_number">page ke..</string>
    <string name="view_more">view more</string>
    <string name="hello_again">Hello Again</string>
    <string name="welcome_back_you_ve_nbeen_missed">Welcome back you\'ve \nbeen missed!</string>
    <string name="username">Username</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login">Login</string>
    <string name="belum_punya_akun">Belum punya akun?</string>
    <string name="contact_admin">Contact admin</string>
    <string name="text">text</string>
    <string name="login_example">Login</string>
    <string name="add_item_txt">Add Item</string>
    <string name="products_is_empty">0 Products</string>
    <string name="product_is_avail">Product is avail</string>
    <string name="product_is_not_avail">Product not avail</string>
    <string name="upload">Upload</string>
    <string name="privacy_police_text_content">Kami menghargai privasi Anda dan berkomitmen untuk melindungi informasi pribadi yang Anda berikan kepada kami melalui aplikasi inventory kami. \n\nKami hanya akan menggunakan informasi pribadi Anda untuk tujuan pengelolaan inventaris dan tidak akan membagikannya dengan pihak ketiga tanpa persetujuan Anda. Kami akan mengambil langkah-langkah yang wajar untuk melindungi informasi Anda dari akses yang tidak sah atau penggunaan yang salah. \n\nKami juga dapat menggunakan teknologi seperti cookies untuk memperbaiki pengalaman pengguna di aplikasi kami. Namun, Anda dapat menonaktifkan penggunaan cookies di pengaturan perangkat Anda jika Anda tidak ingin kami menggunakan teknologi ini. \n\nKami akan menyimpan informasi pribadi Anda hanya selama diperlukan untuk tujuan pengelolaan inventaris. Setelah itu, informasi akan dihapus dengan aman dan tidak dapat diakses lagi. \n\nHarap dicatat bahwa kami tidak bertanggung jawab atas praktik privasi atau konten situs web pihak ketiga yang terkait dengan aplikasi kami. Silakan baca kebijakan privasi mereka secara terpisah. \n\nDengan menggunakan aplikasi kami, Anda menyetujui kebijakan privasi kami. Jika Anda memiliki pertanyaan atau kekhawatiran tentang kebijakan ini, silakan hubungi kami melalui kontak yang tersedia di aplikasi kami.</string>
    <string name="txt_no_barcode">Barcode akan tersedia jika status product active</string>
    <string name="txt_scan_qr">Scan QR code to find product</string>
    <string name="print_barcode">Print Barcode</string>
    <string name="product_in">Product IN</string>
    <string name="product_out">Product OUT</string>
    <string name="privacy_police_notice">Privacy Police Notice</string>
    <string name="read">Read</string>
    <string name="privacy_police">Privacy Police</string>
    <string name="i_accept">I Accept</string>
    <string name="all">all</string>
    <string name="on_progress">on progress</string>
    <string name="active">active</string>
    <string name="label">label</string>
    <string name="text_not_upload">Wahh..., Kamu belum upload product nih</string>
    <string name="activity">Activity</string>
    <string name="_2_news">2 news</string>
    <string name="txt_null">null</string>
    <string-array name="default_items">
        <item>Tambahkan nanti</item>
    </string-array>
</resources>