<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".core.view.main.detail_product.DetailProductActivity">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/content_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="280dp"
            android:fitsSystemWindows="true">


            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/collapsing_toolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                app:collapsedTitleTextColor="@color/white"
                app:contentScrim="?attr/colorPrimary"
                app:expandedTitleTextColor="@color/white"
                app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
                app:title="Product">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/black">

                    <ImageView
                        android:id="@+id/iv_backdrop_collapse"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center|end"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_people"
                        app:layout_collapseMode="parallax"
                        android:alpha=".50"/>

                </RelativeLayout>
                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:layout_collapseMode="pin"
                    app:navigationIcon="@drawable/ic_baseline_arrow_back_ios_new_24_white"/>

            </com.google.android.material.appbar.CollapsingToolbarLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <com.google.android.material.chip.Chip
                        android:id="@+id/status_detail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:text="@string/chip_example_text"
                        android:textColor="@color/white"/>
                    
                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="16dp"/>

                    <!--Item name-->
                    <TextView
                        android:id="@+id/tv_name_product_detail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/susu_beruang"
                        android:textSize="24sp"
                        android:fontFamily="@font/inter_bold"/>

                    <!--code-->
                    <TextView
                        android:id="@+id/chip_code_item_detail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/code_example"
                        android:fontFamily="@font/inter_semibold"/>

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="16dp"/>

                    <!--category and sub category-->
                    <RelativeLayout
                        android:id="@+id/content_2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">


                        <com.google.android.material.chip.Chip
                            android:id="@+id/chip_catgory"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/inter_semibold"
                            android:text="@string/chip_example_text" />

                        <com.google.android.material.chip.Chip
                            android:id="@+id/chip_sub_category"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:layout_toEndOf="@id/chip_catgory"
                            android:text="@string/chip_example_text"
                            android:fontFamily="@font/inter_semibold"/>
                    </RelativeLayout>

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="16dp"/>

                    <!--Spec item-->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/specification_example"
                            android:fontFamily="@font/inter_bold"
                            android:textSize="16sp"/>

                        <TextView
                            android:id="@+id/tv_spec_product_detail"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:fontFamily="@font/inter_semibold"
                            android:text="@string/lorem" />

                    </LinearLayout>

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="16dp"/>

                    <!--data-->
                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        app:cardCornerRadius="@dimen/radius_card_15">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:padding="8dp">

                            <!--exp date-->
                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/expired_date_example"
                                    android:fontFamily="@font/inter_medium"/>

                                <Space
                                    android:layout_width="8dp"
                                    android:layout_height="wrap_content"/>

                                <TextView
                                    android:id="@+id/tv_exp_detail"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/exp_example"
                                    android:fontFamily="@font/inter_semibold"/>
                            </LinearLayout>

                            <!--qty-->
                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal"
                                android:layout_marginTop="8dp">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/quantity_example"
                                    android:fontFamily="@font/inter_medium"/>

                                <Space
                                    android:layout_width="8dp"
                                    android:layout_height="wrap_content"/>

                                <TextView
                                    android:id="@+id/tv_qty_detail"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/quantity_number_example"
                                    android:fontFamily="@font/inter_semibold"/>
                            </LinearLayout>

                            <!--price-->
                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal"
                                android:layout_marginTop="8dp">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/price"
                                    android:fontFamily="@font/inter_medium"/>

                                <Space
                                    android:layout_width="8dp"
                                    android:layout_height="wrap_content"/>

                                <TextView
                                    android:id="@+id/tv_price_detail"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/price_number_example"
                                    android:fontFamily="@font/inter_semibold"/>
                            </LinearLayout>

                            <!--location-->
                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal"
                                android:layout_marginTop="8dp">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/location"
                                    android:fontFamily="@font/inter_medium"/>

                                <Space
                                    android:layout_width="8dp"
                                    android:layout_height="wrap_content"/>

                                <TextView
                                    android:id="@+id/tv_location_detail"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/location_example"
                                    android:fontFamily="@font/inter_semibold"/>
                            </LinearLayout>

                            <!--model-->
                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal"
                                android:layout_marginTop="8dp">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/model"
                                    android:fontFamily="@font/inter_medium"/>

                                <Space
                                    android:layout_width="8dp"
                                    android:layout_height="wrap_content"/>

                                <TextView
                                    android:id="@+id/tv_model_detail"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/model_example"
                                    android:fontFamily="@font/inter_semibold"/>


                            </LinearLayout>

                            <!--lot-->
                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal"
                                android:layout_marginTop="8dp">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/lot"
                                    android:fontFamily="@font/inter_medium"/>

                                <Space
                                    android:layout_width="8dp"
                                    android:layout_height="wrap_content"/>

                                <TextView
                                    android:id="@+id/tv_lot_detail"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/lot_example"
                                    android:fontFamily="@font/inter_semibold"/>
                            </LinearLayout>
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="16dp"/>

                    <ImageView
                        android:id="@+id/ivQrCode"
                        android:layout_width="300dp"
                        android:layout_height="300dp"
                        android:layout_gravity="center"
                        android:contentDescription="@string/content_desc_todo"/>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_prod_in"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Product IN"
                        android:fontFamily="@font/inter_semibold"
                        android:textAllCaps="false"
                        android:layout_gravity="center"
                        app:cornerRadius="15dp"/>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_prod_out"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Product OUT"
                        android:fontFamily="@font/inter_semibold"
                        android:textAllCaps="false"
                        android:layout_gravity="center"
                        app:cornerRadius="15dp"
                        android:backgroundTint="@color/red_smooth"/>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:gravity="center"
                        android:padding="16dp">

                        <TextView
                            android:id="@+id/tv_btn_trash"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/delete_item"
                            android:fontFamily="@font/inter_semibold"
                            android:textColor="@color/red_smooth"
                            tools:ignore="RelativeOverlap" />


                        <ProgressBar
                            android:id="@+id/progress_delete"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:visibility="gone"/>


                        <TextView
                            android:id="@+id/tv_btn_update"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:fontFamily="@font/inter_semibold"
                            android:text="@string/update_item"
                            android:textColor="@color/blue_ocean"
                            tools:ignore="RelativeOverlap" />
                    </RelativeLayout>

                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</androidx.constraintlayout.widget.ConstraintLayout>