<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/tv_item_month_year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:textSize="16sp"
        android:fontFamily="@font/inter_bold"/>

    <TextView
        android:id="@+id/tv_day_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time"
        android:fontFamily="@font/inter_bold"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp">

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="2dp"
            android:layout_height="match_parent"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                app:cardCornerRadius="20dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                android:id="@+id/card_item">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip_status"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/chip_example_text"
                        android:fontFamily="@font/inter_semibold"
                        android:textColor="@color/white"
                        android:layout_gravity="end"/>


                    <TextView
                        android:id="@+id/tv_item_code"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/inter_bold"
                        android:text="@string/code_example" />

                    <TextView
                        android:id="@+id/tv_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="16dp"
                        android:fontFamily="@font/inter_semibold"
                        android:text="@string/lorem" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tv_quantity"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/inter_semibold"
                            android:text="@string/quantity_200" />

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/tv_quantity"
                            android:layout_marginTop="8dp"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/tv_data_not_found"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/inter_medium"
                                android:text="@string/load" />

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="vertical"
                                android:layout_alignParentEnd="true">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="Assign by: "/>

                                <Space
                                    android:layout_width="wrap_content"
                                    android:layout_height="8dp"/>

                               <LinearLayout
                                   android:layout_width="wrap_content"
                                   android:layout_height="wrap_content"
                                   android:orientation="horizontal"
                                   android:gravity="center">

                                   <de.hdodenhof.circleimageview.CircleImageView
                                       android:id="@+id/iv_item_user_photo"
                                       android:layout_width="30dp"
                                       android:layout_height="30dp"
                                       tools:src="@drawable/example_user"/>

                                   <Space
                                       android:layout_width="8dp"
                                       android:layout_height="wrap_content"/>

                                   <TextView
                                       android:id="@+id/tv_item_username"
                                       android:layout_width="wrap_content"
                                       android:layout_height="wrap_content"
                                       tools:text="afauzi"
                                       android:fontFamily="@font/inter_semibold"/>
                               </LinearLayout>
                            </LinearLayout>
                        </RelativeLayout>
                    </RelativeLayout>

                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>

